1. adding jquery-ui with smoothness theme 2. layouts for desktop, tablet and smartphone 3. redirection from index to search-result

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -20,7 +20,7 @@
             <a class="navbar-brand" href="javascript:void(0);">ABC Auction</a>
         </div>
         <div class="navbar-collapse collapse">
-            <form class="navbar-form navbar-left navbar-input-group" role="search">
+            <form class="navbar-form navbar-left navbar-input-group" role="search" action="search-result.html" method="get">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Enter product name">
                 </div>
