--- a/homework1/index.html
+++ b/homework1/index.html
@@ -123,7 +123,7 @@
             <!-- TODO http://stackoverflow.com/questions/24309721/in-bootstrap-3-how-to-change-the-distance-between-rows-in-vertical dont forget to check all the br-s in the doc -->
             <br>
 
-            <div class="row vertical-align-center">
+            <div class="row vertical-align-middle">
                 <div class="col-lg-4">
                     <select class="form-control">
                         <option>Category</option>
@@ -134,7 +134,7 @@
                 <div class="col-lg-4">
                     <div id="currentPriceSlider-lg"></div>
                 </div>
-                <div class="col-lg-4 vertical-align-center">
+                <div class="col-lg-4 vertical-align-middle">
                     <span class="col-lg-9">Number of Bids</span>
                     <div class="col-lg-3">
                         <input type="number" class="form-control" value="3" min="0" max="99">
@@ -206,7 +206,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div id="currentPriceSlider-md-sm"></div>
                 </div>
-                <div class="col-md-6 col-sm-6 vertical-align-center">
+                <div class="col-md-6 col-sm-6 vertical-align-middle">
                     <span class="col-md-9 col-sm-9">Number of Bids</span>
                     <div class="col-md-3 col-sm-3">
                         <input type="number" class="form-control" value="3" min="0" max="99">
@@ -273,7 +273,7 @@
             </div>
             <br>
             <div class="row">
-                <div class="row vertical-align-center">
+                <div class="row vertical-align-middle">
                     <span class="col-xs-8">Number of Bids</span>
                     <div class="col-xs-4">
                         <input type="number" class="form-control" value="3" min="0" max="99">
@@ -333,7 +333,7 @@
                 <p>{{description}}</p>
             </div>
         </div>
-        <div class="row text-center vertical-align-center">
+        <div class="row text-center vertical-align-middle">
             <div class="col-lg-4">
                 <h3><b>{{timeleft}}h left</b></h3>
             </div>
@@ -368,7 +368,7 @@
                 <p>{{description}}</p>
             </div>
         </div>
-        <div class="row text-center vertical-align-center">
+        <div class="row text-center vertical-align-middle">
             <div class="col-md-4 col-sm-4">
                 <h3><b>{{timeleft}}h left</b></h3>
             </div>
@@ -406,7 +406,7 @@
         </div>
     </div>
     <br>
-    <div class="row vertical-align-center">
+    <div class="row vertical-align-middle">
         <div class="col-xs-6">
             <h3><b>$ {{price}}</b></h3>
         </div>
@@ -415,7 +415,7 @@
         </div>
     </div>
     <br>
-    <div class="row vertical-align-center">
+    <div class="row vertical-align-middle">
         <div class="col-xs-6">
             <span><h3><img src="assets/img/icon-eye.png" alt=""><b>{{watchers}}</b></h3></span>
         </div>
@@ -424,7 +424,7 @@
         </div>
     </div>
     <br>
-    <div class="row vertical-align-center">
+    <div class="row vertical-align-middle">
         <div class="col-xs-6">
             <h3><b>{{timeleft}}h left</b></h3>
         </div>
