1. add moments as global variable (warning during grunt build/serve) 2. update home view: jump to the product page on click 3. adding moments fw 4. adding product page

--- a/homework3/app/index.html
+++ b/homework3/app/index.html
@@ -48,6 +48,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -55,6 +56,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controller/HomeController.js"></script>
         <script src="scripts/controller/SearchController.js"></script>
+        <script src="scripts/controller/ProductDetailsController.js"></script>
         <script src="scripts/directive/FooterDirective.js"></script>
         <script src="scripts/directive/NavbarDirective.js"></script>
         <script src="scripts/service/ProductService.js"></script>
